# nfl-funindex

./: .gitignore  LICENSE.md  Makefile  README.md  app.py  requirements.txt
app/: Makefile  app.py  notes.md  pyproject.toml  requirements.txt
app/.chalice/: config.json  policy.json  terraform.tf.json
app/chalicelib/: __init__.py  checker.py  page_html.py  publisher.py  schedule.py  scraper.py  site_generator.py  sitegen.py  table.py  template.py  ticker.py
app/tests/: conftest.py
app/tests/cases/: case_game.py  case_renderer.py  case_schedule.py
app/tests/chalicelib/: test_checker.py  test_publisher.py  test_schedule.py  test_scraper.py  test_site.py
app/tests/fixtures/: fix_chalice.py  fix_dynamodb.py  fix_events.py  fix_games.py  fix_requests.py  fix_source.py
data/: dashboard.py  database.db  layout.py  nb.ipynb  scrape_year.py  scraper.py  update_db.py
infra/: chalice.tf.json  main.tf
utils/: terraforming.py
