[tool.poetry]
name = "nfl"
version = "0.1.0"
description = ""
authors = ["alvgrv <aaron.lovegrove@essentia-analytics.com>"]


[tool.poetry.dependencies]
python = ">=3.9, <3.10"
chalice = "^1.27.3"
boto3 = "^1.24.80"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
requests = "^2.28.1"
pandas = "^1.5.0"
html5lib = "^1.1"
jinja2 = "^3.1.2"



[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.7"
pylint = "^2.15.4"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  'E0401', # import errors
  'E0611', # more import errors
  'C0103', # variable names
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
url = "https://pypi.org/simple/"